add features data

--- a/src/scss/global/_reset.scss
+++ b/src/scss/global/_reset.scss
@@ -36,6 +36,14 @@ a:not([class]) {
   text-decoration-skip-ink: auto;
 }
 
+ul{
+  list-style-type: none;
+}
+
+a{
+  text-decoration: none;
+}
+
 img,
 picture {
   max-width: 100%;
@@ -68,3 +76,5 @@ select {
 img {
   image-rendering: -webkit-optimize-contrast;
 }
+
+
