--- a/src/scss/global/_typography.scss
+++ b/src/scss/global/_typography.scss
@@ -1,8 +1,26 @@
+@use '../abstracts/variables' as *;
+
 @import url('https://fonts.googleapis.com/css2?family=Epilogue:wght@500;700&display=swap');
+
+
+html{
+   font-size: 62.5%;
+}
 
 body{
    font-family: 'Epilogue', sans-serif;
    font-size: 18px;
+}
+
+h1{
+   font-size: clamp(3.6rem, 5vw + 1rem, 8rem);
+   letter-spacing: clamp(-0.5px, 4vw , -1.11px);
+}
+
+p{
+   font-size: clamp(1.6rem, 4vw, 1.8rem);
+   line-height: clamp(26px,5vw,28px);
+   color: $medium-gray;
 }
 
 
