--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,10 +1,12 @@
-@use './global/reset';
-@use './global/typography';
+@forward './global/reset';
+@forward './global/typography';
 
-@use './components/buttons';
-@use './components/navbar';
-@use './components/hero';
+@forward './abstracts/variables';
+
+@forward './components/buttons';
+@forward './components/navbar';
+@forward './components/hero';
 
 
-@use './layout/layout';
-@use './layout/footer';
+@forward './layout/layout';
+@forward './layout/footer';
