--- a/src/scss/layout/_layout.scss
+++ b/src/scss/layout/_layout.scss
@@ -1,12 +1,22 @@
-@use '../abstracts/variables' as *;
+@use "../abstracts/variables" as *;
 
-body{
+body {
    min-height: 100vh;
    max-width: $mobile;
    margin: 0 auto;
 
-   @media(min-width: 1000px){
-
+   @media (min-width: 1000px) {
       max-width: $desktop;
+
+      main {
+         display: grid;
+         grid-template-columns: 1fr 1fr;
+         align-items: center;
+         justify-items: center;
+      }
+
+      section{
+         order: -1;
+      }
    }
 }
