--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -1,8 +1,7 @@
 @use "../abstracts/variables" as *;
 
 main {
-   // padding-bottom: 64px;
-   min-height: calc(100vh - 67.95px);
+   
 
    picture {
       margin-bottom: 48px;
@@ -21,23 +20,23 @@ main {
          margin-bottom: 24px;
       }
 
-      button {
-         background-color: $almost-blk;
-         //the button will jump on hover without transparent
-         border: 1px solid transparent;
-         border-radius: 15px;
-         font-weight: 700;
+      // .btn-hero {
+      //    background-color: $almost-blk;
+      //    //the button will jump on hover without transparent
+      //    border: 1px solid transparent;
+      //    border-radius: 15px;
+      //    font-weight: 700;
 
-         color: $almost-white;
-         padding: 12px 20px 10px 24px;
-         margin-bottom: 48px;
+      //    color: $almost-white;
+      //    padding: 12px 20px 10px 24px;
+      //    margin-bottom: 48px;
 
-         &:hover {
-            background-color: $almost-white;
-            color: $almost-blk;
-            border: 1px solid $almost-blk;
-         }
-      }
+      //    &:hover {
+      //       background-color: $almost-white;
+      //       color: $almost-blk;
+      //       border: 1px solid $almost-blk;
+      //    }
+      // }
 
       footer {
          display: flex;
@@ -47,6 +46,9 @@ main {
    }
 
    @media (min-width: 1000px) {
+
+      max-width: 1145px;
+      margin-inline: auto;
       picture {
          img {
             width: 480px;
