--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -4,7 +4,7 @@ $desktop: 1440px;
 // Colors
 $almost-white: hsl(0, 0%, 98%);
 $medium-gray: hsl(0, 0%, 41%);
-$almost-blk: hsl(0,0%,8%);
+$almost-blk: hsl(0, 0%, 8%);
 
 
 //map over each image and give it a width and height
